2002-02-07  Mitsugu SAKAMOTO  <mitsugu@argv.org>

	* lisp/emacspeak-w3m.el: If cursor move anchor, display URL
	message Buffer not speak.

2002-02-07  Koichi INOUE  <inoue@argv.org>

	* lisp/emacspeak-w3m.el: Voicify hyperlinks.

2002-02-06  Koichi INOUE  <inoue@argv.org>

	* Enabled byte-compile.

2002-01-29  Koichi INOUE  <inoue@argv.org>

	* Synched up to Raman's CVS.
	merged changes from Jan 10 2002 to today.

2002-01-26  Koichi INOUE  <inoue@argv.org>

	* emacspeak-m17n-setup, emacspeak-m17n-ja:
	`emacspeak-m17n-put-language-strategy' points to the function
	you like to put language automatically. Current choice is
	emacspeak-m17n-put-language-ja-ne,
	emacspeak-m17n-put-language-ja-ke-1(default),
	emacspeak-m17n-put-language-ja-ke-all.

	* Initialization: emacspeak-m17n-setup is now not loaded
	automatically.
	After loading emacspeak-setup, you should load
	emacspeak-m17n-setup yourself or by emacspeak-startup-hook.

2002-01-23  Koichi INOUE  <inoue@argv.org>

	* Prepared for public test.

2002-01-21  Koichi INOUE  <inoue@argv.org>

	* Import. Diff files from Emacspeak CVS development at
	:pserver:anonymous@cvs.emacspeak.sourceforge.net:/cvsroot/emacspeak

	For developers: execute devel/prepare-cvs from *this* directory
	to incorporate changed files from your development directory.
	Add newly changed file to devel/diff.lst.
	Read devel/prepare-cvs script for details.