@@ -1,3 +1,7 @@
+2002-02-09  Koichi INOUE  <inoue@argv.org>
+
+	* lisp/emacspeak-w3m.el: Fixed voicification to work.
+
 2002-02-07  Mitsugu SAKAMOTO  <mitsugu@argv.org>
 
 	* lisp/emacspeak-w3m.el: If cursor move anchor, display URL
